# Chatbot-SNS

./: .gitignore  README.md  config.example.yml  conftest.py  pyproject.toml  requirements.txt  start.bat  todo_plan.md  work_log.md
.agents/: agents.md
bot/: __init__.py  config.py  event_bus.py  main.py  models.py  pipeline.py
bot/adapters/: base.py
bot/adapters/qq/: __init__.py  adapter.py  onebot.py
bot/adapters/terminal/: __init__.py  adapter.py
bot/llm/: __init__.py  base.py  openai_engine.py
bot/memory/: __init__.py  long_term.py  manager.py
bot/personality/: __init__.py  engine.py
bot/personality/cards/: default.yml
bot/voice/: __init__.py  tts.py
docs/: phase-1-interview-prep.md  phase-2-interview-prep.md
tests/: conftest.py  test_config.py  test_event_bus.py  test_llm_openai.py  test_memory.py  test_personality_engine.py  test_pipeline.py
