[project]
name = "chatbot-sns"
version = "0.1.0"
description = "跨平台智能聊天机器人"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
